fix: fixed linting: upgrade golangci from v1 to v2 standard to easily provide minimal linting support
